VN-MKR-3 Add xdebug and set the default port for DB

--- a/.lando.yml
+++ b/.lando.yml
@@ -5,4 +5,10 @@ config:
   via: nginx
   database: mysql
   cache: redis
+  xdebug: true
   webroot: ./public
+  config:
+    php: .lando/php.ini
+services:
+  database:
+    portforward: 3307
